[gd_scene load_steps=11 format=3 uid="uid://1fgrmvypn7s1"]

[ext_resource type="Script" path="res://Game.gd" id="1_8nm3h"]
[ext_resource type="PackedScene" uid="uid://du6udgdmjk3uf" path="res://player.tscn" id="1_wkfop"]
[ext_resource type="Texture2D" uid="uid://cvxeqeql607n5" path="res://fundo.png" id="2_ebgmg"]
[ext_resource type="PackedScene" uid="uid://belwrququ77pv" path="res://ball.tscn" id="2_gr7tc"]
[ext_resource type="Script" path="res://SaverLoader.gd" id="5_kcpgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7iglx"]
size = Vector2(1176, 87)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_estxa"]
size = Vector2(1165, 96.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlc3i"]
size = Vector2(697.829, 107.722)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06xrp"]
size = Vector2(680.423, 128.639)

[sub_resource type="SystemFont" id="SystemFont_j106p"]
font_names = PackedStringArray("Century Gothic")
font_weight = 800

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8nm3h")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.788235, 0, 0.960784, 0.266667)
position = Vector2(581, 325)
scale = Vector2(0.667824, 0.618519)
texture = ExtResource("2_ebgmg")

[node name="Top" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(575, -49)
shape = SubResource("RectangleShape2D_7iglx")

[node name="Botton" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Botton"]
position = Vector2(575, 689)
shape = SubResource("RectangleShape2D_estxa")

[node name="Left" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-43.3309, 341.147)
rotation = -1.57518
shape = SubResource("RectangleShape2D_xlc3i")

[node name="Right" type="Area2D" parent="."]
position = Vector2(20, -2)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(1195, 337)
rotation = -1.58348
shape = SubResource("RectangleShape2D_06xrp")

[node name="Player" parent="." instance=ExtResource("1_wkfop")]
unique_name_in_owner = true
position = Vector2(146, 355)

[node name="Player2" parent="." instance=ExtResource("1_wkfop")]
unique_name_in_owner = true
position = Vector2(994, 357)
side = "p2"

[node name="Ball" parent="." instance=ExtResource("2_gr7tc")]
position = Vector2(586, 355)

[node name="Label" type="Label" parent="."]
modulate = Color(1, 0, 0.141176, 1)
texture_filter = 5
offset_left = 334.0
offset_top = 31.0
offset_right = 344.0
offset_bottom = 52.0
scale = Vector2(9.00462, 5.48325)
theme_override_fonts/font = SubResource("SystemFont_j106p")
text = "0"

[node name="Label2" type="Label" parent="."]
modulate = Color(0.992157, 0, 0.0470588, 1)
texture_filter = 5
offset_left = 777.0
offset_top = 28.0
offset_right = 787.0
offset_bottom = 49.0
scale = Vector2(9.00462, 5.48325)
theme_override_fonts/font = SubResource("SystemFont_j106p")
text = "0"

[node name="Node" type="Node" parent="."]

[node name="SaverLoader" type="Node" parent="Node"]
unique_name_in_owner = true
script = ExtResource("5_kcpgy")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 230.0
offset_right = 77.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Salvar"

[node name="LoadButton" type="Button" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Carregar"

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Botton" to="." method="_on_botton_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/SaveButton" to="Node/SaverLoader" method="_on_save_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/LoadButton" to="Node/SaverLoader" method="_on_load_button_pressed"]
